--- a/src/theme/core.css
+++ b/src/theme/core.css
@@ -1,4 +1,3 @@
 ion-toolbar {
-  --background: var(--ion-color-primary);
-  --color: var(--ion-color-primary-contrast);
+  --color: var(--ion-color-primary);
 }
