--- a/src/theme/core.css
+++ b/src/theme/core.css
@@ -1,4 +1,8 @@
 ion-toolbar {
-  --color: #ffffff;
+  --color: var(--ion-color-primary-contrast);
   --background: var(--ion-color-primary);
+}
+
+ion-back-button {
+  --color: var(--ion-color-primary-contrast);
 }
